Fix z-index of undo box

--- a/apps/assets/css/scooby.css
+++ b/apps/assets/css/scooby.css
@@ -45,3 +45,6 @@
 	background-color: #ffffee;
 }
 
+#toastContainer {
+	z-index: 9999;
+}
